--- a/css/style.css
+++ b/css/style.css
@@ -140,15 +140,14 @@ body {
 .oval-container {
     width: 650px;
     height: 200px;
-    background: linear-gradient(135deg, #000, #000);
+    background: black;
     color: #A52A2A;
     display: flex;
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    border-radius: 30px;
-    /* Oval Shape */
-    box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.3);
+    border-radius: 35px;
+    box-shadow: 0px -15px 0px rgba(0, 0, 0, 0.3);
     padding: 25px;
     transition: transform 0.3s ease-in-out;
     margin: auto;
@@ -156,9 +155,22 @@ body {
     font-family: 'Playfair Display', serif;
 }
 
-.oval-container h2 {
-    color: #F4E0C4;
+
+.oval-container  img {
+    width: 25px;
+    vertical-align: middle; /* Keeps it aligned properly */
 }
+
+
+.oval-container .service-time h2, .oval-container .location-info  h2{
+    color: #F4E0C4;
+    font-size: 30px;
+
+    display: flex;
+    align-items: center; /* Keeps text and image aligned */
+    gap: 8px; /* Adds spacing between the image and text */
+}
+
 
 .oval-container:hover {
     transform: scale(1.05);
