--- a/css/style.css
+++ b/css/style.css
@@ -287,10 +287,13 @@ body {
     font-weight: bold;
     font-family: 'Playfair Display', serif;
     color: #24161C;
+    margin-bottom: 20px;
+    padding-bottom: 0;
+  
 }
 
 .right-page p {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.6;
     font-family: 'Lato', sans-serif;
    color: #C3A07B;
@@ -301,7 +304,7 @@ body {
 }
 
 .right-page ul li {
-    font-size: 16px;
+    font-size: 14px;
     margin-bottom: 10px;
     color: #C3A07B;
     font-family: 'Lato', sans-serif;
