--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,8 @@ body {
     height: 700px;
     overflow: hidden;
     border-radius: 53px;
+    margin-top: 150px;
+    margin-bottom: 100px;
 }
 
 
@@ -458,11 +460,9 @@ body {
 .leadership {
     background-color: white;
     color: #24161C;
-    padding: 50px 20px;
     text-align: center;
     margin: 0;
     padding: 0;
-    margin-top: 100px;
 }
 
 .leadership h2 {
@@ -470,8 +470,7 @@ body {
     margin-bottom: 20px;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
-    padding-top: 60px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .leadership h2 .hearts {
@@ -481,7 +480,7 @@ body {
 .leadership p {
     color: #C3A07B;
     font-family: 'Lato', sans-serif;
-    font-size: 28px;
+    font-size: 27px;
 }
 
 .leaders-container {
@@ -580,7 +579,6 @@ body {
 
 .blog-post img {
     width: 80%;
-    height: 40%;
     border-radius: 15px;
 }
 
