--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #ffffff;
+    overflow-x: hidden;
 }
 
 .header {
@@ -14,8 +15,8 @@ body {
     align-items: center;
     padding: 15px 50px;
     width: 100%;
-
     height: 100px;
+
 }
 
 .header img {
@@ -53,7 +54,7 @@ body {
     color: white;
     width: 180px;
     border-radius: 50px;
-    padding: 16px ;
+    padding: 16px;
     text-align: center;
     margin-top: -40px;
     margin-left: 160px;
@@ -86,6 +87,7 @@ body {
     color: white;
     padding-top: 100px;
 }
+
 .sub {
     color: #F4E0C4;
 }
@@ -106,7 +108,7 @@ body {
     color: white;
     width: 180px;
     border-radius: 50px;
-    padding: 16px ;
+    padding: 16px;
     text-align: center;
     text-decoration: none;
     margin-top: 70px;
@@ -121,7 +123,7 @@ body {
     border: 1px solid #C3A07B;
     width: 180px;
     border-radius: 50px;
-    padding: 16px ;
+    padding: 16px;
     text-align: center;
     text-decoration: none;
     margin-left: 25px;
@@ -153,22 +155,27 @@ body {
     margin: auto;
     margin-top: -70px;
     font-family: 'Playfair Display', serif;
+
 }
 
 
-.oval-container  img {
+.oval-container img {
     width: 25px;
-    vertical-align: middle; /* Keeps it aligned properly */
+    vertical-align: middle;
+    /* Keeps it aligned properly */
 }
 
 
-.oval-container .service-time h2, .oval-container .location-info  h2{
+.oval-container .service-time h2,
+.oval-container .location-info h2 {
     color: #F4E0C4;
     font-size: 30px;
 
     display: flex;
-    align-items: center; /* Keeps text and image aligned */
-    gap: 8px; /* Adds spacing between the image and text */
+    align-items: center;
+    /* Keeps text and image aligned */
+    gap: 8px;
+    /* Adds spacing between the image and text */
 }
 
 
@@ -238,13 +245,14 @@ body {
 .about {
     position: absolute;
     top: 30px;
-    
+
     border: 1px solid #C3A07B;
     color: #C3A07B;
     text-align: center;
     width: 180px;
-    padding: 13px ;
-    border-radius: 50px;    text-decoration: none;
+    padding: 13px;
+    border-radius: 50px;
+    text-decoration: none;
 
     margin-left: 25px;
     left: 20px;
@@ -289,14 +297,14 @@ body {
     color: #24161C;
     margin-bottom: 20px;
     padding-bottom: 0;
-  
+
 }
 
 .right-page p {
     font-size: 14px;
     line-height: 1.6;
     font-family: 'Lato', sans-serif;
-   color: #C3A07B;
+    color: #C3A07B;
 }
 
 .right-page ul {
@@ -317,7 +325,7 @@ body {
     color: white;
     width: 180px;
     border-radius: 50px;
-    padding: 16px ;
+    padding: 16px;
     text-align: center;
     text-decoration: none;
 
@@ -356,17 +364,22 @@ body {
     border-radius: 53px;
     margin-top: 150px;
     margin-bottom: 100px;
+
+
+
 }
 
 
 /* Background Image */
-.social-proof-container img {
+.social-proof-container .excess img {
     object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
-    
+
+
+
 }
 
 
@@ -390,7 +403,8 @@ body {
     position: relative;
     width: 65px;
     margin: 0 auto;
- }
+}
+
 .social-proof h2 {
     font-size: 36px;
     margin-bottom: 20px;
@@ -427,13 +441,17 @@ body {
     font-size: 40px;
     margin: 0;
     font-family: 'Playfair Display', serif;
-    display: flex; /* Enables horizontal alignment */
-    align-items: center; /* Centers text and image vertically */
-    gap: 18px; /* Adds space between image and text */
+    display: flex;
+    /* Enables horizontal alignment */
+    align-items: center;
+    /* Centers text and image vertically */
+    gap: 18px;
+    /* Adds space between image and text */
 }
 
 .stat-box h3 img {
-    width: 30px; /* Adjust size as needed */
+    width: 30px;
+    /* Adjust size as needed */
     height: auto;
     position: relative;
     padding-top: 20px;
@@ -620,25 +638,18 @@ body {
 
 .diagonal {
     margin: auto;
-    width: 100%;
+    width: 95%;
     height: 500px;
     background-color: #6E5A48;
     margin: auto;
     clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 100%);
     padding: 40px 20px;
     position: absolute;
-
-    position: absolute;
     left: 5%;
     top: 4030px;
+    border-top-left-radius: 200px;
+    overflow: hidden;
 
-   
-
-
-
-        border-top-left-radius: 200px;
-        overflow: hidden;
-    
 }
 
 
@@ -656,10 +667,9 @@ body {
     clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 100%);
     padding: 40px 20px;
     padding-top: 100px;
-    
-
     border-top-left-radius: 200px;
     overflow: hidden;
+
 }
 
 
@@ -794,4 +804,3 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: lighter;
 }
-
